--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="row_song_item_play_all">Play All</string>
     <string name="row_song_item_shuffle_all">Shuffle All</string>
 	<string name="action_settings">Settings</string>
+	<string name="title_setting">Settings</string>
 </resources>
