--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
-    <string name="app_name">Music Player</string>
-    <string name="package_name">com.muiz6.musicplayer</string>
-    <string name="default_current_song_title">Play a Song</string>
-    <string name="tab_song_header">All Songs</string>
-    <string name="row_song_item_play_all">Play All</string>
-    <string name="row_song_item_shuffle_all">Shuffle All</string>
+	<string name="app_name">Music Player</string>
+	<string name="package_name">com.muiz6.musicplayer</string>
+	<string name="default_current_song_title">Play a Song</string>
+	<string name="tab_song_header">All Songs</string>
+	<string name="row_song_item_play_all">Play All</string>
+	<string name="row_song_item_shuffle_all">Shuffle All</string>
 	<string name="action_settings">Settings</string>
 	<string name="title_setting">Settings</string>
+	<string name="title_queue">Play Queue</string>
 </resources>
