--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
 	<string name="app_name">Music Player</string>
 	<string name="package_name">com.muiz6.musicplayer</string>
-	<string name="default_current_song_title">Play a Song</string>
-	<string name="tab_song_header">All Songs</string>
-	<string name="row_song_item_play_all">Play All</string>
-	<string name="row_song_item_shuffle_all">Shuffle All</string>
-	<string name="action_settings">Settings</string>
-	<string name="title_setting">Settings</string>
-	<string name="title_queue">Play Queue</string>
+
+	<string name="play_a_song">Play a Song</string>
+	<string name="all_songs">All Songs</string>
+	<string name="play_all">Play All</string>
+	<string name="shuffle_all">Shuffle All</string>
+	<string name="settings">Settings</string>
+	<string name="play_queue">Play Queue</string>
+	<string name="unknown_artist">Unknown Artist</string>
+	<string name="unknown_album">Unknown Album</string>
 </resources>
