--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 	<string name="play_queue">Play Queue</string>
 	<string name="unknown_artist">Unknown Artist</string>
 	<string name="unknown_album">Unknown Album</string>
+	<string name="scanning_music_library">Scanning Music Library...</string>
 </resources>
