--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
 	<string name="unknown_artist">Unknown Artist</string>
 	<string name="unknown_album">Unknown Album</string>
 	<string name="scanning_music_library">Scanning Music Library...</string>
+	<string name="unknown_title">Unknown Title</string>
 </resources>
