--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
 	<string name="play_queue">Play Queue</string>
 	<string name="unknown_artist">Unknown Artist</string>
 	<string name="unknown_album">Unknown Album</string>
-	<string name="scanning_music_library">Scanning Music Library...</string>
+	<string name="scanning_music_library">Scanning Music Library…</string>
 	<string name="unknown_title">Unknown Title</string>
+	<string name="search_title">Search Title</string>
+	<string name="search">Search…</string>
 </resources>
