--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,7 @@
 	<string name="unknown_title">Unknown Title</string>
 	<string name="search_title">Search Title</string>
 	<string name="search">Search…</string>
+	<string name="songs">Songs</string>
+	<string name="artists">Artists</string>
+	<string name="albums">Albums</string>
 </resources>
