--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
 	<string name="songs">Songs</string>
 	<string name="artists">Artists</string>
 	<string name="albums">Albums</string>
+	<string name="rescan_library">Rescan Library</string>
 </resources>
